--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head><title>FC Barcelona FanPage</title>
+    <style>
+      .header {width:100%; height:20%; background:black; color:white;}
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
