--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head><title>FC Barcelona FanPage</title>
     <style>
       .header {width:100%; height:20%; background:black; color:white;}
+      a {text-decoration: none!important;}
+    </style>
+  </head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<header class="header">
+  <table>
+    <tr><td><a href="웹프로그래밍 프로젝트.html" target="_self">
+      <img src="barcelona.png" width="100" height="100"></td></a>
+    <td><a href="경기 기록.html">
 </body>
 </html>
