--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
 <header class="header">
   <table>
-    <tr><td><a href="웹프로그래밍 프로젝트.html" target="_self">
+    <tr><td><a href="index.html" target="_self">
       <img src="barcelona.png" width="100" height="100"></td></a>
-    <td><a href="경기 기록.html">
+    <td><a href="경기 기록.html">&lt;바르셀로나 뉴스&gt;</td>
+    </header></tr></table>
 </body>
 </html>
