--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <img src="barcelona.png" width="100" height="100"></td></a>
     <td><a href="경기 기록.html">&lt;바르셀로나 뉴스&gt;</td>
     </header></tr></table>
-  <img src="his1.png" alt="사진1" width="400" height="400">
+  <h4>구단 역사</h4>
+  <img src="his1.png" alt="사진1" width="400" height="400"><hr>
+  <p>바르셀로나는 
 </body>
 </html>
