--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     </style>
   </head>
 <body>
-<header class="header">
   <table>
     <tr><td><a href="index.html" target="_self">
       <img src="barcelona.png" width="100" height="100"></td></a>
@@ -15,6 +14,6 @@
     </header></tr></table>
   <h4>구단 역사</h4>
   <img src="his1.png" alt="사진1" width="400" height="400"><hr>
-  <p>바르셀로나는 
+  <p>바르셀로나는 1899년 10월 22일, 
 </body>
 </html>
