--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
 <body>
   <table>
+    <header class="header">
     <tr><td><a href="index.html" target="_self">
       <img src="barcelona.png" width="100" height="100"></td></a>
     <td><a href="경기 기록.html">&lt;바르셀로나 뉴스&gt;</td>
