--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
   <head><title>FC Barcelona FanPage</title>
     <style>
-      .header {width:100%; height:20%; background:black; color:white;}
+      .header {width:100%; height:30%; background:black; color:white;}
       a {text-decoration: none!important;}
     </style>
   </head>
 <body>
+  <header class="header">
   <table>
     <header class="header">
     <tr><td><a href="index.html" target="_self">
