--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     </style>
   </head>
 <body>
-  <header class="header">
   <table>
     <header class="header">
     <tr><td><a href="index.html" target="_self">
@@ -16,6 +15,8 @@
     </header></tr></table>
   <h4>구단 역사</h4>
   <img src="his1.png" alt="사진1" width="400" height="400"><hr>
-  <p>바르셀로나는 1899년 10월 22일, 
+  <p>바르셀로나는 1899년 10월 22일, 스위스인 주안 감페르를 주축으로 하여 클럽이 탄생하였다. 그리고 11월 29일에 오토 쿤슬, 욀터 윌드, 윌리엄 파손스, 오토 마이어, 
+    루이스 드 오소, 바르토메우 테라다스, 에흐리크 두칼, 페레 카보트, 카를레스 푸올, 주제프 요베와 조안 감페르를 포함한 11명이 회의를 한 끝에 팀명을 
+    Futbol Club Barcelona로 정하기로 했다. 
 </body>
 </html>
