--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
   <img src="his1.png" alt="사진1" width="400" height="400"><hr>
   <p>바르셀로나는 1899년 10월 22일, 스위스인 주안 감페르를 주축으로 하여 클럽이 탄생하였다. 그리고 11월 29일에 오토 쿤슬, 욀터 윌드, 윌리엄 파손스, 오토 마이어, 
     루이스 드 오소, 바르토메우 테라다스, 에흐리크 두칼, 페레 카보트, 카를레스 푸올, 주제프 요베와 조안 감페르를 포함한 11명이 회의를 한 끝에 팀명을 
-    Futbol Club Barcelona로 정하기로 했다. 
+    Futbol Club Barcelona로 정하기로 했다.</p>
+  <p>1908년, 클럽 구성원은 38명에 불과했고, 클럽을 더 크게 만들고 싶었던 조안 감페르는 나머지 구성원들의 동의를 받아 초대 회장으로 등극하였고 지난 10년 사이에 
+    4번의 홈 구장 변화가 있었던 만큼 제대로 된 홈 구장의 필요성을 느끼면서 1909년 4월, 캄프 데 라 인두스트리아를 공식 홈 구장으로 선정했다. 그리고 1910년에 제대로
+    된 축구단이 되기 위해서는 클럽 엠블럼이 있어야 한다고 판단하에 위 사진의 왼쪽 상단과 같은 엠블럼이 만들어졌다. 이후 이 엠블럼은 현재까지 사용되는 엠블럼의 
+    배경이 되었다. 
 </body>
 </html>
