--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
     4번의 홈 구장 변화가 있었던 만큼 제대로 된 홈 구장의 필요성을 느끼면서 1909년 4월, 캄프 데 라 인두스트리아를 공식 홈 구장으로 선정했다. 그리고 1910년에 제대로
     된 축구단이 되기 위해서는 클럽 엠블럼이 있어야 한다고 판단하에 위 사진의 왼쪽 상단과 같은 엠블럼이 만들어졌다. 이후 이 엠블럼은 현재까지 사용되는 엠블럼의 
     배경이 되었다. 
+   <p>1920년대부터 바르셀로나는 파울리노 알칸타라, 주젭 사미티에르, 리카르도 사모라와 스타 선수들의 등장으로 더 큰 클럽으로 나아가기 시작했다. 덕분에 1922, 드디어
+     바르셀로나 자체 소유의 홈 구장 캄프 데 레스 코르트로 홈 구장을 이전하게 되었다. 22,000명의 정원을 목적으로 건축되었고 전체 입석으로 입장할 시 60,000명까지 
+     수용할 수 있었다.
 </body>
 </html>
