--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     배경이 되었다. 
    <p>1920년대부터 바르셀로나는 파울리노 알칸타라, 주젭 사미티에르, 리카르도 사모라와 스타 선수들의 등장으로 더 큰 클럽으로 나아가기 시작했다. 덕분에 1922, 드디어
      바르셀로나 자체 소유의 홈 구장 캄프 데 레스 코르트로 홈 구장을 이전하게 되었다. 22,000명의 정원을 목적으로 건축되었고 전체 입석으로 입장할 시 60,000명까지 
-     수용할 수 있었다.
+     수용할 수 있었다. 그리고 1929년 2월 12일, 라리가가 창설되었고 바르셀로나는 승점 25점으로 라리가 최초 우승 타이틀을 거머지게 되었다.</p>
 </body>
 </html>
