--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head><title>FC Barcelona FanPage</title>
     <style>
-      .header {width:100%; height:30%; background:black; color:white;}
+      .header {width:100%; height:30%; background:black; color:white;
+      margin:0 -9999rem;}
       a {text-decoration: none!important;}
     </style>
   </head>
