--- a/index.html
+++ b/index.html
@@ -23,5 +23,21 @@
    <p>1920년대부터 바르셀로나는 파울리노 알칸타라, 주젭 사미티에르, 리카르도 사모라와 스타 선수들의 등장으로 더 큰 클럽으로 나아가기 시작했다. 덕분에 1922, 드디어
      바르셀로나 자체 소유의 홈 구장 캄프 데 레스 코르트로 홈 구장을 이전하게 되었다. 22,000명의 정원을 목적으로 건축되었고 전체 입석으로 입장할 시 60,000명까지 
      수용할 수 있었다. 그리고 1929년 2월 12일, 라리가가 창설되었고 바르셀로나는 승점 25점으로 라리가 최초 우승 타이틀을 거머지게 되었다.</p>
+  <p>1930년 7월 30일, 조안 감페르가 자살을 하면서 향년 52세 나이로 사망하게 되었다. 주제프 수뇰이 제 2대 회장으로 부임하게 되었다. 그리고 1936년, 스페인 내전의 
+    여파로 주제프 수뇰이 프랑코 군에게 총상을 당했고, 이 시기에 카탈루냐어 사용 자체가 금지되어 팀명이 Club de Futbol Barcelona라는 명칭으로 이름이 바뀌었다. 그
+    리고 스페인 내전으로 인해 라리가를 진행할 수 없게 되었지만 다행히 1939년 6월 29일, 캄프 데 레스 코르트의 재개장이 허가되었으며 라리가가 재개되었다. 하지만 빼
+    앗긴 팀명으로 인해 로고에 적힌 FCB를 사용하지 못하고 CFB로 바뀌게 된다.</p>
+  <p>1955년, 점점 커지는 클럽의 위상에 걸맞게 새로운 홈 구장이 필요하다는 많은 클럽 구성원들의 목소리가 나왔고 운영진들도 이를 받아들여 새로운 홈 구장을 디자인하
+    기 시작한다. 그리고 1957년 9월 24일, 2년 간의 건설 끝에 새로운 홈 구장 캄 노우가 개장한다. 당시 최대 수용 인원은 99,053명으로 전 세계 최대의 축구 전용 구장
+    이라는 타이틀을 얻게 된다. 새로운 홈 구장과 함께 바르셀로나는 승승장구하기 시작했으며 현재 UEFA 유로파 리그의 원조 격이라고 할 수 있는 인터-시티 페어스컵에
+    서 1957-58, 1959-60 시즌에 우승을 차지하게 되고 라리가에서도 1958-59, 1959-60 시즌에 2연속 우승을 차지하게 되었다.</p>
+  <p>1959-60 시즌 라리가 우승 이후 바르사는 30년에 걸친 최악의 암흑기를 겪었다. 처음에는 일시적인 것처럼 보였던 이 암흑기는 해가 지나가면서 끝이 보이지 않는 터
+    널이 되었다. 바르셀로나는 60년대 동안 라리가 우승을 단 한차례도 차지하지 못했으며, 1998-90시즌까지 30시즌 동안 라리가 우승이 단 두 차례에 불과했다. 끝없는 
+    암흑기와 함께 팀의 몰락이 계속될 것이라고 예상되었지만 1971년에 리누스 미헬스 감독을 선임하고 1973년 8월 13일, 요한 크루이프를 최대 이적료로 영입했으며
+    크루이프는 곧바로 바르셀로나의 주장으로 선임되었다. 이렇게 감독 리누스 미헬스, 주장 요한 크루이프를 필두로 바르셀로나는 1973-74 시즌 라리가 타이틀도 다시
+    되찾아 오게 되었고, 크루이프는 1974년 발롱도르를 거머지게 되었다. 같은 해인 1974년, 바르셀로나는 창단 75주년을 맞이하여 공식 응원가를 처음으로 만들기 시작
+    하였다. 하우메 피카스, 주제프 마리아 에스피나스 작사에 마누엘 발스와 코랄 산트 조르디 작곡으로 Cant Del Barca를 만들었다. 그리고 스페인 정부가 민주주의 시
+    대로 접어들면서 모든 지방의 언어 사용이 자유화되면서 Club de Futbol Barcelona에서 다시 원 이름인 Futbol Club Barcelon를 되찾았고 로고 역시 CFB에서 FCB로
+    바뀔 수 있게 되었다.
 </body>
 </html>
