--- a/index.html
+++ b/index.html
@@ -39,5 +39,16 @@
     하였다. 하우메 피카스, 주제프 마리아 에스피나스 작사에 마누엘 발스와 코랄 산트 조르디 작곡으로 Cant Del Barca를 만들었다. 그리고 스페인 정부가 민주주의 시
     대로 접어들면서 모든 지방의 언어 사용이 자유화되면서 Club de Futbol Barcelona에서 다시 원 이름인 Futbol Club Barcelon를 되찾았고 로고 역시 CFB에서 FCB로
     바뀔 수 있게 되었다.
+    <p>1978년에 치러진 회장 선거에서 주젭 유이스 누녜스가 당선된 후 재정이 넉넉해졌고 이때부터 누녜스는 스타 플레이어들을 수집하기 시작했는데, 1982년 여름 이적
+      시장에 80년대 최고의 축구 스타, 디에고 마라도나를 영입했고, 이어서 게리 리네커, 베른트 슈스터, 안도니 수비사레타 같은 슈퍼스타들을 돈을 뿌려가며 영입했다.
+      동시에 누녜스는 우도 라텍, 세자르 루이스 메노티, 테리 베너블스, 루이스 아라고네스 등 명장등을 연이어 영입했으나 성과가 나오지 않았다. 하지만 이렇게 천문학적
+      인 돈을 뿌린 것에 비하면 바르사가 거둔 성과는 보잘 것 없었다. 1984-85 시즌에 라리가 우승을 거두기는 했지만 그것이 끝이었다. 이후에도 바르사의 암흑기는 1990
+      년까지 계속되었다.</p>
+  <p>1977-78 시즌을 끝으로 팀을 떠난 요한 크루이프가 10년 뒤에 감독으로 바르셀로나에 돌아왔다. 그는 선수단을 대폭 정리하여 베스트 일레븐 중에서 무려 10명을 갈아
+    치웠다. 누녜스 회장의 전폭적인 지원 약속을 바탕으로 크루이프는 기존 주전 선수들을 싸그리 정리하고 자신이 원하는 새로운 선수들을 대거 영입했다. 크루이프는 흐리
+    스토 스토이치코프, 미카엘 라우드루프, 로날트 쿠만, 게오르그 하지, 호마리우 등의 외국인 선수들을 대거 영입해 '드림팀'을 구축했다. 자신이 원했던 선수들로 스쿼드
+    를 전원 갈아엎은 크루이프는 이후 바르사에 자신이 원하는 축구를 덧입히는 작업을 했다. 그러나 크루이프의 드림팀은 초기 2년간 좋은 결과를 거두지 못했지만 1988-89
+    시즌에 위너스 컵 타이틀을 따면서 본격적인 궤도에 오르기 시작했다. 1989-90 시즌 코파 델 레이 우승을 차지했으며, 1990-91 시즌부터 1993-94 시즌까지 4시즌 연속 라
+    리가 우승 타이틀을 거머지게 되었더. 
 </body>
 </html>
