--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
     스토 스토이치코프, 미카엘 라우드루프, 로날트 쿠만, 게오르그 하지, 호마리우 등의 외국인 선수들을 대거 영입해 '드림팀'을 구축했다. 자신이 원했던 선수들로 스쿼드
     를 전원 갈아엎은 크루이프는 이후 바르사에 자신이 원하는 축구를 덧입히는 작업을 했다. 그러나 크루이프의 드림팀은 초기 2년간 좋은 결과를 거두지 못했지만 1988-89
     시즌에 위너스 컵 타이틀을 따면서 본격적인 궤도에 오르기 시작했다. 1989-90 시즌 코파 델 레이 우승을 차지했으며, 1990-91 시즌부터 1993-94 시즌까지 4시즌 연속 라
-    리가 우승 타이틀을 거머지게 되었더. 
+    리가 우승 타이틀을 거머지게 되었다.</p>
+  <p>
+  </p>
+    
 </body>
 </html>
