--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
     스토 스토이치코프, 미카엘 라우드루프, 로날트 쿠만, 게오르그 하지, 호마리우 등의 외국인 선수들을 대거 영입해 '드림팀'을 구축했다. 자신이 원했던 선수들로 스쿼드
     를 전원 갈아엎은 크루이프는 이후 바르사에 자신이 원하는 축구를 덧입히는 작업을 했다. 그러나 크루이프의 드림팀은 초기 2년간 좋은 결과를 거두지 못했지만 1988-89
     시즌에 위너스 컵 타이틀을 따면서 본격적인 궤도에 오르기 시작했다. 1989-90 시즌 코파 델 레이 우승을 차지했으며, 1990-91 시즌부터 1993-94 시즌까지 4시즌 연속 라
-    리가 우승 타이틀을 거머지게 되었다.</p>
-  <p>
+    리가 우승 타이틀을 거머지게 되었다. 하지만 크루이프 감독과 라우드루프, 호마리우, 스토이치코프 등 스타 플레이어들이 심각한 대립을 하면서 팀 케미가 박살나기
+  시작했다. 그리고 1994-95 시즌부터 호마리우, 스토이치코프, 라우드루프 등 스타 플레이어들이 차례로 타 팀으로 이적하면서 '드림팀'은 와해되었다. 이렇게 스타 플레이
+  어들이 떠나자 크루이프와 바르셀로나도 함께 몰락했다. 1995-96 시즌까지 두 시즌 동안 계속 실패를 거둔 크루이프 감독은 결국 누녜스 회장과 갈등 끝에 팀을 떠났다.</p>
+  <p>1996년 크루이프를 경질한 누녜스 회장은 후임으로 바비 롭슨을 새 감독으로 영입했고, 동시에 호나우두와 루이스 엔리케를 영입했다. 이후 1999년, 바르셀로나는 기나
+    긴 시간 끝에 마침내 클럽 창단 100 주년을 기록하게 된다. 
   </p>
     
 </body>
