--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <table class="header">
     <tr><td><a href="index.html" target="_self">
       <img src="barcelona.png" width="100" height="100"></td></a>
-    <td><a href="경기 기록.html">&lt;바르셀로나 뉴스&gt;</td></tr></table>
+    <td><a href="구단역사.html">&lt;구단 역사&gt;</td>
+    <td><a href="바르셀로나뉴스.html">&lt;바르셀로나 뉴스&gt;</td>
+    </tr></table>
   <h4>구단 역사</h4>
   <img src="his1.png" alt="사진1" width="400" height="400"><hr>
   <p>바르셀로나는 1899년 10월 22일, 스위스인 주안 감페르를 주축으로 하여 클럽이 탄생하였다. 그리고 11월 29일에 오토 쿤슬, 욀터 윌드, 윌리엄 파손스, 오토 마이어, 
