--- a/셀타비고.html
+++ b/셀타비고.html
@@ -5,4 +5,9 @@
 <body>
   <table>
     <tr><td><img src="celta.png" width="100" height="75"></td> <td><p>vs</p></td>
-      <td><img src="barcelona.png" width="100" height="75"></td>
+      <td><img src="barcelona.png" width="100" height="75"></td></tr>
+    <tr><td>셀타 비고</td> <td><p>vs</p></td> <td>바르셀로나</td></tr>
+    <tr><td>0:0</td></tr>
+    <table>
+      </body>
+    </html>
