--- a/바야돌리드.html
+++ b/바야돌리드.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <table>
-    <tr><td><img src="balladolid.png" width="100" height="75"></td> <td><p>vs</p></td>
+    <tr><td><img src="alladolid.png" width="100" height="75"></td> <td><p>vs</p></td>
       <td><img src="barcelona.png" width="100" height="75"></td></tr>
     <tr><td>레알 바야돌리</td> <td><p>vs</p></td> <td>바르셀로나</td></tr>
     <tr><td>3</td><td>:</td><td>1</td></tr>
