--- a/소시에다드.html
+++ b/소시에다드.html
@@ -7,7 +7,7 @@
     <tr><td><img src="barcelona.png" width="100" height="75"></td> <td><p>vs</p></td>
       <td><img src="realsociedad.png" width="100" height="75"></td></tr>
     <tr><td>바르셀로나</td> <td><p>vs</p></td> <td>레알 소시에다드</td></tr>
-    <tr><td>1</td><td>:</td><td style= color:"red";>2</td></tr>
+    <tr><td>1</td><td>:</td><td style= "color:red";>2</td></tr>
     <table>
       </body>
     </html>
