--- a/에스파뇰.html
+++ b/에스파뇰.html
@@ -7,7 +7,7 @@
     <tr><td><img src="espanyol.png" width="100" height="75"></td> <td><p>vs</p></td>
       <td><img src="barcelona.png" width="100" height="75"></td></tr>
     <tr><td>에스파뇰</td> <td><p>vs</p></td> <td>바르셀로나</td></tr>
-    <tr><td>2</td><td>:</td><td style= "color:red">4</td></tr>
+    <tr><td>2</td><td>:</td><td style= "color:red";>4</td></tr>
     <table>
       </body>
     </html>
