--- a/마요르카.html
+++ b/마요르카.html
@@ -7,7 +7,7 @@
     <tr><td><img src="barcelona.png" width="100" height="75"></td> <td><p>vs</p></td>
       <td><img src="mallorca.png" width="100" height="75"></td></tr>
     <tr><td>바르셀로나</td> <td><p>vs</p></td> <td>마요르카</td></tr>
-    <tr><td>3</td> <td>:</td> <td>0</td></tr>
+    <tr><td style= "color:red";>3</td> <td>:</td> <td>0</td></tr>
     </tr>
     <table>
       </body>
