--- a/마요르카.html
+++ b/마요르카.html
@@ -4,11 +4,14 @@
 </head>
 <body>
   <table>
+    <tr>05.29 02:00 캄프 누</tr>
     <tr><td><img src="barcelona.png" width="100" height="75"></td> <td><p>vs</p></td>
       <td><img src="mallorca.png" width="100" height="75"></td></tr>
     <tr><td>바르셀로나</td> <td><p>vs</p></td> <td>마요르카</td></tr>
     <tr><td style= "color:red";>3</td> <td>:</td> <td>0</td></tr>
-    </tr>
+    <tr><td><img src="ball.png" width="10" height="10"></td><td>1 파티</td></tr>
+    <tr><td><img src="ball.png" width="10" height="10"></td><td>24 파티</td></tr>
+    <tr><td><img src="ball.png" width="10" height="10"></td><td>70 가비</td></tr>
     <table>
       </body>
     </html>
