--- a/소시에다드.html
+++ b/소시에다드.html
@@ -4,10 +4,11 @@
 </head>
 <body>
   <table>
+    <tr>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;05.21 04:00 캄프 누</tr>
     <tr><td><img src="barcelona.png" width="100" height="75"></td> <td><p>vs</p></td>
       <td><img src="realsociedad.png" width="100" height="75"></td></tr>
-    <tr><td>바르셀로나</td> <td><p>vs</p></td> <td>레알 소시에다드</td></tr>
-    <tr><td>1</td><td>:</td><td style= "color:red";>2</td></tr>
+    <tr><td><tr>&nbsp;&nbsp;바르셀로나&nbsp;&nbsp;&nbsp;</td> <td><p>vs</p></td> <td>&nbsp;&nbsp;&nbsp;레알 소시에다드</td></tr>
+    <tr><td>&nbsp;&nbsp;&nbsp;1</td><td>&nbsp;:&nbsp;</td><td style= "color:red";>&nbsp;&nbsp;&nbsp;2</td></tr>
     <table>
       </body>
     </html>
