--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <tr><td><a href="index.html" target="_self">
       <img src="barcelona.png" width="100" height="100"></td></a>
     <td><a href="구단 역사.html">&lt;구단 역사&gt;</td>
+    <td><a href="구단 순위표.html">&lt;구단 순위표&gt;</td>
     <td><a href="바르셀로나뉴스.html">&lt;바르셀로나 뉴스&gt;</td>
     </tr></table>
   <h4>최근 경기 기록</h4>
