--- a/구단 순위표.html
+++ b/구단 순위표.html
@@ -3,7 +3,8 @@
 <head><title>구단 순위표</title>
 </head>
 <body>
-<table>
+  <h3>리그 순위표</h3>
+<table border="2">
 <tr><td>순위</td><td>팀명</td><td>경기</td><td>승점</td><td>승</td><td>무</td><td>패</td><td>득점</td><td>실점</td><td>득실차</td></tr>
 <tr><td>1</td><td>바르셀로나</td><td>37</td><td>88</td><td>28</td><td>4</td><td>5</td><td>69</td><td>18</td><td>51</td></tr>
 <tr><td>2</td><td>레알 마드리드</td><td>37</td><td>77</td><td>24</td><td>5</td><td>8</td><td>74</td><td>35</td><td>39</td></tr>
@@ -15,3 +16,25 @@
 <tr><td>8</td><td>아틀레틱</td><td>37</td><td>50</td><td>14</td><td>8</td><td>15</td><td>46</td><td>42</td><td>4</td></tr>
 <tr><td>9</td><td>지로나</td><td>37</td><td>49</td><td>13</td><td>10</td><td>14</td><td>57</td><td>53</td><td>4</td></tr>
 <tr><td>10</td><td>바예카노</td><td>37</td><td>49</td><td>13</td><td>10</td><td>14</td><td>45</td><td>50</td><td>-5</td></tr>
+  </table>
+  <h3>팀 내 공격포인트</h3>
+  <table border="2">
+    <tr><td>순위</td><td>선수명</td><td>경기</td><td>골</td><td>어시스트</td></tr>
+    <tr><td>1</td><td>레반도프스키</td><td>44</td><td>33</td><td>8</td></tr>
+    <tr><td>2</td><td>하피냐</td><td>48</td><td>10</td><td>10</td></tr>
+    <tr><td>3</td><td>우스만 뎀벨레</td><td>33</td><td>8</td><td>8</td></tr>
+    <tr><td>4</td><td>안수 파티</td><td>49</td><td>7</td><td>3</td></tr>
+    <tr><td>5</td><td>페란 토레스</td><td>43</td><td>7</td><td>3</td></tr>
+    <tr><td>6</td><td>페드리</td><td>35</td><td>7</td><td>1</td></tr>
+    <tr><td>7</td><td>세르지 로베르토</td><td>31</td><td>4</td><td>3</td></tr>
+    <tr><td>8</td><td>가비</td><td>47</td><td>2</td><td>5</td></tr>
+    <tr><td>9</td><td>프랭키 더용</td><td>41</td><td>2</td><td>4</td></tr>
+    <tr><td>10</td><td>조르디 알바</td><td>29</td><td>2</td><td>4</td></tr>
+    <tr><td>11</td><td>쥘 쿤데</td><td>38</td><td>1</td><td>5</td></tr>
+    <tr><td>12</td><td>케시에</td><td>42</td><td>3</td><td>1</td></tr>
+    <tr><td>13</td><td>부스케츠</td><td>41</td><td>0</td><td>4</td></tr>
+    <tr><td>14</td><td>마르코스 알론소</td><td>35</td><td>3</td><td>0</td></tr>
+    <tr><td>15</td><td>아라우호</td><td>31</td><td>1</td><td>2</td></tr>
+    <tr><td>16</td><td>에릭 가르시아</td><td>30</td><td>1</td><td>1</td></tr>
+    <tr><td>17</td><td>크리스텐센</td><td>30</td><td>1</td><td>1</td></tr>
+    
