--- a/구단 순위표.html
+++ b/구단 순위표.html
@@ -16,6 +16,16 @@
 <tr><td>8</td><td>아틀레틱</td><td>37</td><td>50</td><td>14</td><td>8</td><td>15</td><td>46</td><td>42</td><td>4</td></tr>
 <tr><td>9</td><td>지로나</td><td>37</td><td>49</td><td>13</td><td>10</td><td>14</td><td>57</td><td>53</td><td>4</td></tr>
 <tr><td>10</td><td>바예카노</td><td>37</td><td>49</td><td>13</td><td>10</td><td>14</td><td>45</td><td>50</td><td>-5</td></tr>
+<tr><td>11</td><td>세비야</td><td>37</td><td>49</td><td>13</td><td>10</td><td>14</td><td>46</td><td>52</td><td>-6</td></tr>
+<tr><td>12</td><td>마요르카</td><td>37</td><td>47</td><td>13</td><td>8</td><td>16</td><td>34</td><td>43</td><td>-9</td></tr>
+<tr><td>13</td><td>카디스</td><td>37</td><td>41</td><td>10</td><td>11</td><td>16</td><td>29</td><td>52</td><td>-23</td></tr>
+<tr><td>14</td><td>헤타페</td><td>37</td><td>41</td><td>10</td><td>11</td><td>16</td><td>34</td><td>45</td><td>-11</td></tr>
+<tr><td>15</td><td>발렌시아</td><td>37</td><td>41</td><td>11</td><td>8</td><td>18</td><td>41</td><td>44</td><td>-3</td></tr>
+<tr><td>16</td><td>알메리아</td><td>37</td><td>40</td><td>11</td><td>7</td><td>19</td><td>46</td><td>62</td><td>-16</td></tr>
+<tr><td>17</td><td>셀타 비고</td><td>37</td><td>40</td><td>10</td><td>10</td><td>17</td><td>41</td><td>52</td><td>-11</td></tr>
+<tr><td>18</td><td>레알 바야돌리드</td><td>37</td><td>39</td><td>11</td><td>6</td><td>20</td><td>33</td><td>63</td><td>-30</td></tr>
+<tr><td>19</td><td>에스파뇰</td><td>37</td><td>36</td><td>8</td><td>12</td><td>17</td><td>49</td><td>66</td><td>-17</td></tr>
+<tr><td>20</td><td>엘체</td><td>37</td><td>24</td><td>5</td><td>9</td><td>23</td><td>29</td><td>66</td><td>-37</td></tr>
   </table>
   <h3>팀 내 공격포인트</h3>
   <table border="2">
