--- a/엘클2.html
+++ b/엘클2.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <table>
-    <tr><td style="text-align">수페르코파 </td></tr>
+    <tr><td>수페르코파</td></tr>
     <tr>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;23.1.16 04:00 킹 파흐드 인터내셔널 스타디움 </tr>
     <tr><td><img src="real.png" width="100" height="75"></td> <td><p>vs</p></td>
       <td><img src="barcelona.png" width="100" height="75"></td></tr>
