--- a/엘클1.html
+++ b/엘클1.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <table>
-    <tr>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;22.10.16 23:15 산티아고 베르나베우</tr>
+    <tr>22.10.16 23:15 산티아고 베르나베우</tr>
     <tr><td><img src="real.png" width="100" height="75"></td> <td><p>vs</p></td>
       <td><img src="barcelona.png" width="100" height="75"></td></tr>
     <tr><td>&nbsp;레알 마드리드&nbsp;&nbsp;</td> <td><p>vs</p></td> <td>&nbsp;&nbsp;바르셀로나</td></tr>
