--- a/엘클5.html
+++ b/엘클5.html
@@ -5,15 +5,15 @@
 <body>
   <table>
     <tr><td>코파 델 레이 2차전</td></tr>  
-    <tr>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;23.4.6 04:00 캄프 누</tr>
+    <tr>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;23.4.6 04:00 캄프 누</tr>
     <tr><td><img src="barcelona.png" width="60" height="75"></td> <td><p>vs</p></td>
       <td><img src="real.png" width="100" height="75"></td></tr>
-    <tr><td>&nbsp;바르셀로나&nbsp;&nbsp;</td> <td><p>vs</p></td> <td>&nbsp;&nbsp;레알 마드리드</td></tr>
-    <tr><td>&nbsp;&nbsp;&nbsp;0</td><td>&nbsp;:&nbsp;</td><td style= color:red;>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4</td></tr>
-    <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="ball.png" width="10" height="10">45+1 비니시우스</tr>
-     <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="ball.png" width="10" height="10">50 벤제마  </tr>
-     <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="ball.png" width="10" height="10">58 벤제마  </tr>
-     <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="ball.png" width="10" height="10">81 벤제마  </tr>
+    <tr><td>바르셀로나</td> <td><p>vs</p></td> <td>레알 마드리드</td></tr>
+    <tr><td>0</td><td></td><td style= color:red;>4</td></tr>
+    <tr><td><img src="ball.png" width="10" height="10">45+1 비니시우스</tr>
+     <tr><td><img src="ball.png" width="10" height="10">50 벤제마  </tr>
+     <tr><td><img src="ball.png" width="10" height="10">58 벤제마  </tr>
+     <tr><td><img src="ball.png" width="10" height="10">81 벤제마  </tr>
     <table>
       </body>
     </html>
