--- a/index.html
+++ b/index.html
@@ -2,30 +2,32 @@
 <html>
   <head><title>FC Barcelona FanPage</title>
     <style>
-      .header {width:100%; height:30%; background:black; color:white;}
-      a {text-decoration: none!important;}
+      .header {width:100%; background:gray; color:white;}
+      a {text-decoration: none!important; color:white;}
     </style>
   </head>
-<body>
+<body style="background-color:black";>
   <table class="header">
     <tr><td><a href="index.html" target="_self">
       <img src="barcelona.png" width="100" height="100"></td></a>
-    <td><a href="구단 역사.html">&lt;구단 역사&gt;</td>
-    <td><a href="구단 순위표.html">&lt;구단 순위표&gt;</td>
-    <td><a href="바르셀로나뉴스.html">&lt;바르셀로나 뉴스&gt;</td>
+    <td><a href="구단 역사.html"><h3>&lt;구단 역사&gt;</h3></td>
+    <td><a href="구단 순위표.html"><h3>&lt;구단 순위표&gt;</h3></td>
+    <td><a href="바르셀로나뉴스.html"><h3>&lt;바르셀로나 뉴스&gt;</h3></td>
     </tr></table>
-  <h4>최근 경기 기록</h4>
+   <span style="color:blue";><h4>최근 경기 기록</h4></span>
+  <div style="background-color:white";>
   <iframe src="셀타비고.html" width="280" height="210"></iframe>
   <iframe src="마요르카.html" width="280" height="210"></iframe>
   <iframe src="바야돌리드.html" width="280" height="210"></iframe>
   <iframe src="소시에다드.html" width="280" height="210"></iframe>
-  <iframe src="에스파뇰.html" width="280" height="210"></iframe>
+  <iframe src="에스파뇰.html" width="280" height="210"></iframe></div>
   <hr><br><br>
-  <h4>22-23 시즌 엘클라시코</h4>
+  <span style="color:blue";><h4>22-23 시즌 엘클라시코</h4></span>
+  <div style="background-color:white";>
   <iframe src="엘클5.html" width="280" height="210"></iframe>
   <iframe src="엘클4.html" width="280" height="210"></iframe>
   <iframe src="엘클3.html" width="280" height="210"></iframe>
   <iframe src="엘클2.html" width="280" height="210"></iframe>
-  <iframe src="엘클1.html" width="280" height="210"></iframe>
+  <iframe src="엘클1.html" width="280" height="210"></iframe></div>
   </body>
 </html>
