--- a/마요르카.html
+++ b/마요르카.html
@@ -4,11 +4,11 @@
 </head>
 <body>
   <table>
-    <tr>&nbsp;&nbsp;&nbsp;05.29 02:00 캄프 누</tr>
-    <tr><td><img src="barcelona.png" width="100" height="75"></td> <td><p>vs</p></td>
-      <td><img src="mallorca.png" width="100" height="75"></td></tr>
-    <tr><td>&nbsp;바르셀로나&nbsp;&nbsp;</td> <td><p>vs</p></td> <td>&nbsp;&nbsp;마요르카</td></tr>
-    <tr><td style= "color:red";>&nbsp;&nbsp;&nbsp;3</td> <td>&nbsp;:&nbsp;</td> <td>&nbsp;0</td></tr>
+    <tr>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;05.29 02:00 캄프 누</tr>
+    <tr><td>&nbsp;<img src="barcelona.png" width="80" height="75"></td> <td><p>&nbsp;vs</p></td>
+      <td><img src="mallorca.png" width="110" height="75"></td></tr>
+    <tr><td>&nbsp;바르셀로나&nbsp;&nbsp;</td> <td><p>&nbsp;vs</p></td> <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;마요르카</td></tr>
+    <tr><td style= "color:red";>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3</td> <td>&nbsp;:</td> <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;0</td></tr>
     <tr><td><img src="ball.png" width="10" height="10"> 1 파티</td></tr>
     <tr><td><img src="ball.png" width="10" height="10"> 24 파티</td></tr>
     <tr><td><img src="ball.png" width="10" height="10"> 70 가비</td></tr>
