--- a/마요르카.html
+++ b/마요르카.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <table>
-    <tr>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;05.29 02:00 캄프 누</tr>
+    <caption>05.29 02:00 캄프 누</caption>
     <tr><td>&nbsp;<img src="barcelona.png" width="80" height="75"></td> <td><p>&nbsp;vs</p></td>
       <td><img src="mallorca.png" width="110" height="75"></td></tr>
     <tr><td>&nbsp;바르셀로나&nbsp;&nbsp;</td> <td><p>&nbsp;vs</p></td> <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;마요르카</td></tr>
