--- a/엘클3.html
+++ b/엘클3.html
@@ -4,13 +4,12 @@
 </head>
 <body>
   <table>
-    <tr><td>코파 델 레이 1차전</td></tr>
-    <tr>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;23.3.3 05:00 산티아고 베르나베우</tr>
-    <tr><td><img src="real.png" width="100" height="75"></td> <td><p>vs</p></td>
-      <td><img src="barcelona.png" width="100" height="75"></td></tr>
+    <caption>코파 델 레이 1차전<caption>
+    <tr><td>&nbsp;&nbsp;<img src="real.png" width="90" height="75"></td> <td><p>vs</p></td>
+      <td>&nbsp;&nbsp;<img src="barcelona.png" width="90" height="75"></td></tr>
     <tr><td>&nbsp;레알 마드리드&nbsp;&nbsp;</td> <td><p>vs</p></td> <td>&nbsp;&nbsp;바르셀로나</td></tr>
-    <tr><td style= color:red;>&nbsp;&nbsp;&nbsp;0</td><td>&nbsp;:&nbsp;</td><td style= color:red;>&nbsp;1</td></tr>
-    <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="redball.png" width="10" height="10">26 밀리탕 </td></tr>
+    <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;0</td><td>&nbsp;:</td><td style= color:red;>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1</td></tr>
+    <tr><td><img src="redball.png" width="20" height="20">26 밀리탕 </td></tr>
     <table>
       </body>
     </html>
