--- a/엘클3.html
+++ b/엘클3.html
@@ -7,7 +7,7 @@
     <caption>코파 델 레이 1차전<caption>
     <tr><td>&nbsp;&nbsp;<img src="real.png" width="90" height="75"></td> <td><p>vs</p></td>
       <td>&nbsp;&nbsp;<img src="barcelona.png" width="90" height="75"></td></tr>
-    <tr><td>&nbsp;레알 마드리드&nbsp;&nbsp;</td> <td><p>vs</p></td> <td>&nbsp;&nbsp;바르셀로나</td></tr>
+    <tr><td>레알 마드리드&nbsp;</td> <td><p>vs</p></td> <td>&nbsp;&nbsp;바르셀로나</td></tr>
     <tr><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;0</td><td>&nbsp;:</td><td style= color:red;>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1</td></tr>
     <tr><td></td><td></td><td><img src="redball.png" width="20" height="20">26 밀리탕 </td></tr>
     <table>
