--- a/구단 역사.html
+++ b/구단 역사.html
@@ -11,14 +11,14 @@
 <tr><th>1946~1960</th><th>1960~1974</th><th>1974~1975</th><th>1975~2002</th><th>2002~현재</th></tr>
 </tfoot>
  <tbody>
-<tr><td><img src="1899.png" alt="사진1" width="150" height="150"></td><td><img src="1910.png" alt="사진2" width="150" height="150"></td><td><img src="1920.png" alt="사진3" width="150" height="150"></td>
+<tr><td><a href="#1899"><img src="1899.png" alt="사진1" width="150" height="150"></a></td><td><img src="1910.png" alt="사진2" width="150" height="150"></td><td><img src="1920.png" alt="사진3" width="150" height="150"></td>
 <td><img src="1936.png" alt="사진4" width="150" height="150"></td><td><img src="1939.png" alt="사진5" width="150" height="150"></td></tr>
 <tr><td><img src="1946.png" alt="사진6" width="150" height="150"></td><td><img src="1960.png" alt="사진7" width="150" height="150"></td><td><img src="1974.png" alt="사진8" width="150" height="150"></td>
 <td><img src="1975.png" alt="사진9" width="150" height="150"></td><td><img src="2002.png" alt="사진10" width="150" height="150"></td></tr>
 </tbody>
 </table><hr>
  <ul>
-  <li><p>바르셀로나는 1899년 10월 22일, 스위스인 주안 감페르를 주축으로 하여 클럽이 탄생하였다. 그리고 11월 29일에 오토 쿤슬, 욀터 윌드, 윌리엄 파손스, 오토 마이어, 
+  <li><p id="1899">바르셀로나는 1899년 10월 22일, 스위스인 주안 감페르를 주축으로 하여 클럽이 탄생하였다. 그리고 11월 29일에 오토 쿤슬, 욀터 윌드, 윌리엄 파손스, 오토 마이어, 
     루이스 드 오소, 바르토메우 테라다스, 에흐리크 두칼, 페레 카보트, 카를레스 푸올, 주제프 요베와 조안 감페르를 포함한 11명이 회의를 한 끝에 팀명을 
     Futbol Club Barcelona로 정하기로 했다.</p>
   <li><p>1908년, 클럽 구성원은 38명에 불과했고, 클럽을 더 크게 만들고 싶었던 조안 감페르는 나머지 구성원들의 동의를 받아 초대 회장으로 등극하였고 지난 10년 사이에 
