--- a/구단 역사.html
+++ b/구단 역사.html
@@ -11,7 +11,9 @@
 <tr><th>1946~1960</th><th>1960~1974</th><th>1974~1975</th><th>1975~2002</th><th>2002~현재</th></tr>
 </tfoot>
  <tbody>
-<tr><td><a href="#1899"><img src="1899.png" alt="사진1" width="150" height="150"></a></td><td><img src="1910.png" alt="사진2" width="150" height="150"></td><td><img src="1920.png" alt="사진3" width="150" height="150"></td>
+<tr><td><a href="#1899"><img src="1899.png" alt="사진1" width="150" height="150"></a></td>
+ <td><a href="#1910"><img src="1910.png" alt="사진2" width="150" height="150"></a></td>
+ <td><a href="#1920"><img src="1920.png" alt="사진3" width="150" height="150"></a></td>
 <td><img src="1936.png" alt="사진4" width="150" height="150"></td><td><img src="1939.png" alt="사진5" width="150" height="150"></td></tr>
 <tr><td><img src="1946.png" alt="사진6" width="150" height="150"></td><td><img src="1960.png" alt="사진7" width="150" height="150"></td><td><img src="1974.png" alt="사진8" width="150" height="150"></td>
 <td><img src="1975.png" alt="사진9" width="150" height="150"></td><td><img src="2002.png" alt="사진10" width="150" height="150"></td></tr>
@@ -21,11 +23,11 @@
   <li><p id="1899">바르셀로나는 1899년 10월 22일, 스위스인 주안 감페르를 주축으로 하여 클럽이 탄생하였다. 그리고 11월 29일에 오토 쿤슬, 욀터 윌드, 윌리엄 파손스, 오토 마이어, 
     루이스 드 오소, 바르토메우 테라다스, 에흐리크 두칼, 페레 카보트, 카를레스 푸올, 주제프 요베와 조안 감페르를 포함한 11명이 회의를 한 끝에 팀명을 
     Futbol Club Barcelona로 정하기로 했다.</p>
-  <li><p>1908년, 클럽 구성원은 38명에 불과했고, 클럽을 더 크게 만들고 싶었던 조안 감페르는 나머지 구성원들의 동의를 받아 초대 회장으로 등극하였고 지난 10년 사이에 
+  <li><p id="1910">1908년, 클럽 구성원은 38명에 불과했고, 클럽을 더 크게 만들고 싶었던 조안 감페르는 나머지 구성원들의 동의를 받아 초대 회장으로 등극하였고 지난 10년 사이에 
     4번의 홈 구장 변화가 있었던 만큼 제대로 된 홈 구장의 필요성을 느끼면서 1909년 4월, 캄프 데 라 인두스트리아를 공식 홈 구장으로 선정했다. 그리고 1910년에 제대로
     된 축구단이 되기 위해서는 클럽 엠블럼이 있어야 한다고 판단하에 위 사진의 왼쪽 상단과 같은 엠블럼이 만들어졌다. 이후 이 엠블럼은 현재까지 사용되는 엠블럼의 
     배경이 되었다. 
-   <li><p>1920년대부터 바르셀로나는 파울리노 알칸타라, 주젭 사미티에르, 리카르도 사모라와 스타 선수들의 등장으로 더 큰 클럽으로 나아가기 시작했다. 덕분에 1922, 드디어
+   <li><p id="1920">1920년대부터 바르셀로나는 파울리노 알칸타라, 주젭 사미티에르, 리카르도 사모라와 스타 선수들의 등장으로 더 큰 클럽으로 나아가기 시작했다. 덕분에 1922, 드디어
      바르셀로나 자체 소유의 홈 구장 캄프 데 레스 코르트로 홈 구장을 이전하게 되었다. 22,000명의 정원을 목적으로 건축되었고 전체 입석으로 입장할 시 60,000명까지 
      수용할 수 있었다. 그리고 1929년 2월 12일, 라리가가 창설되었고 바르셀로나는 승점 25점으로 라리가 최초 우승 타이틀을 거머지게 되었다.</p>
   <li><p>1930년 7월 30일, 조안 감페르가 자살을 하면서 향년 52세 나이로 사망하게 되었다. 주제프 수뇰이 제 2대 회장으로 부임하게 되었다. 그리고 1936년, 스페인 내전의 
