--- a/구단 역사.html
+++ b/구단 역사.html
@@ -14,7 +14,8 @@
 <tr><td><a href="#1899"><img src="1899.png" alt="사진1" width="150" height="150"></a></td>
  <td><a href="#1910"><img src="1910.png" alt="사진2" width="150" height="150"></a></td>
  <td><a href="#1920"><img src="1920.png" alt="사진3" width="150" height="150"></a></td>
-<td><img src="1936.png" alt="사진4" width="150" height="150"></td><td><img src="1939.png" alt="사진5" width="150" height="150"></td></tr>
+ <td><a href="#1936"><img src="1936.png" alt="사진4" width="150" height="150"></a></td>
+ <td><a href="#1939"><img src="1939.png" alt="사진5" width="150" height="150"></a></td></tr>
 <tr><td><img src="1946.png" alt="사진6" width="150" height="150"></td><td><img src="1960.png" alt="사진7" width="150" height="150"></td><td><img src="1974.png" alt="사진8" width="150" height="150"></td>
 <td><img src="1975.png" alt="사진9" width="150" height="150"></td><td><img src="2002.png" alt="사진10" width="150" height="150"></td></tr>
 </tbody>
@@ -29,11 +30,12 @@
     배경이 되었다. 
    <li><p id="1920">1920년대부터 바르셀로나는 파울리노 알칸타라, 주젭 사미티에르, 리카르도 사모라와 스타 선수들의 등장으로 더 큰 클럽으로 나아가기 시작했다. 덕분에 1922, 드디어
      바르셀로나 자체 소유의 홈 구장 캄프 데 레스 코르트로 홈 구장을 이전하게 되었다. 22,000명의 정원을 목적으로 건축되었고 전체 입석으로 입장할 시 60,000명까지 
-     수용할 수 있었다. 그리고 1929년 2월 12일, 라리가가 창설되었고 바르셀로나는 승점 25점으로 라리가 최초 우승 타이틀을 거머지게 되었다.</p>
-  <li><p>1930년 7월 30일, 조안 감페르가 자살을 하면서 향년 52세 나이로 사망하게 되었다. 주제프 수뇰이 제 2대 회장으로 부임하게 되었다. 그리고 1936년, 스페인 내전의 
-    여파로 주제프 수뇰이 프랑코 군에게 총상을 당했고, 이 시기에 카탈루냐어 사용 자체가 금지되어 팀명이 Club de Futbol Barcelona라는 명칭으로 이름이 바뀌었다. 그
-    리고 스페인 내전으로 인해 라리가를 진행할 수 없게 되었지만 다행히 1939년 6월 29일, 캄프 데 레스 코르트의 재개장이 허가되었으며 라리가가 재개되었다. 하지만 빼
-    앗긴 팀명으로 인해 로고에 적힌 FCB를 사용하지 못하고 CFB로 바뀌게 된다.</p>
+     수용할 수 있었다. 그리고 1929년 2월 12일, 라리가가 창설되었고 바르셀로나는 승점 25점으로 라리가 최초 우승 타이틀을 거머지게 되었다. 1930년 7월 30일,
+    조안 감페르가 자살을 하면서 향년 52세 나이로 사망하게 되었다. 주제프 수뇰이 제 2대 회장으로 부임하게 되었다.</p>
+  <li><p id="1936">그리고 1936년, 스페인 내전의 여파로 주제프 수뇰이 프랑코 군에게 총상을 당했고, 이 시기에 카탈루냐어 사용 자체가 금지되어 팀명이 Club de Futbol 
+   Barcelona라는 명칭으로 이름이 바뀌었다. 그리고 스페인 내전으로 인해 라리가를 진행할 수 없게 되었다.</p>
+   <li><p id="1939">하지만 다행히 1939년 6월 29일, 캄프 데 레스 코르트의 재개장이 허가되었으며 라리가가 재개되었다. 하지만 빼앗긴 팀명으로 인해 
+   로고에 적힌 FCB를 사용하지 못하고 CFB로 바뀌게 된다.</p>
   <li><p>1955년, 점점 커지는 클럽의 위상에 걸맞게 새로운 홈 구장이 필요하다는 많은 클럽 구성원들의 목소리가 나왔고 운영진들도 이를 받아들여 새로운 홈 구장을 디자인하
     기 시작한다. 그리고 1957년 9월 24일, 2년 간의 건설 끝에 새로운 홈 구장 캄 노우가 개장한다. 당시 최대 수용 인원은 99,053명으로 전 세계 최대의 축구 전용 구장
     이라는 타이틀을 얻게 된다. 새로운 홈 구장과 함께 바르셀로나는 승승장구하기 시작했으며 현재 UEFA 유로파 리그의 원조 격이라고 할 수 있는 인터-시티 페어스컵에
