--- a/구단 역사.html
+++ b/구단 역사.html
@@ -26,6 +26,12 @@
    루이스 드 오소, 바르토메우 테라다스, 에흐리크 두칼, 페레 카보트, 카를레스 푸올, 주제프 요베와 조안 감페르를 포함한 11명이 회의를 한 끝에 만장일치로
    팀명을 Futbol Club Barcelona로 정하기로 했다. 창단 당시에는 초대 회장직에 영국인 월터 와일드를 선임했으며, 프로 축구단이 아닌 취미 축구단으로 창단 되었다.
    창단 이후 1년 동안 보나노바 종합 운동장을 홈 구장으로 사용했다.</p>
+   <p>1900년, 카탈루냐 최초의 축구 대회인 1900-01 코파 마카야가 개최되면서 바르셀로나 역시 대회에 참가하였다. 총 6개 팀이 참가하여 리그 방식으로 진행될 
+    예정이었지만 SD 산타하흐가 기권을 선언하면서 5개 팀의 리그 방식으로 진행되었고 승리 시 2점, 무승부 시 1점, 패배 시 0점의 승점 방식을 적용하여 6승 1무 1패 
+    승점 13점을 달성하며 히스파니아 AC에 이어 2위로 대회를 마감하였다. 이 대회에서 조안 감페르가 31 득점을 기록하며 득점왕 타이틀을 차지하였다. 그리고 다음 
+    시즌인 1901-02 시즌에는 6개 팀의 리그 방식으로 진행되었고 바르셀로나가 우승을 차지하며 역사상 첫 트로피를 차지하였다. 1902-03 시즌에는 클루브 에스파뇰에 
+    이어 준우승을 차지했고 바르셀로나 주 컵 대회인 코파 바르셀로나에서 우승을 차지하며 첫 컵 트로피를 차지하였다. 이 시즌을 마지막으로 코파 마카야는 폐지되었다.
+    1903-04 시즌부터는 캄피오나트 데 카탈루냐가 새로 개최되었고 1904-05, 1908-09, 1909-10 시즌에 우승을 차지하였다.</p>
   <li><p id="1910">1908년, 클럽 구성원은 38명에 불과했고, 클럽을 더 크게 만들고 싶었던 조안 감페르는 나머지 구성원들의 동의를 받아 초대 회장으로 등극하였고 지난 10년 사이에 
     4번의 홈 구장 변화가 있었던 만큼 제대로 된 홈 구장의 필요성을 느끼면서 1909년 4월, 캄프 데 라 인두스트리아를 공식 홈 구장으로 선정했다. 그리고 1910년에 제대로
     된 축구단이 되기 위해서는 클럽 엠블럼이 있어야 한다고 판단하에 위 사진의 왼쪽 상단과 같은 엠블럼이 만들어졌다. 이후 이 엠블럼은 현재까지 사용되는 엠블럼의 
