--- a/구단 역사.html
+++ b/구단 역사.html
@@ -32,10 +32,18 @@
     시즌인 1901-02 시즌에는 6개 팀의 리그 방식으로 진행되었고 바르셀로나가 우승을 차지하며 역사상 첫 트로피를 차지하였다. 1902-03 시즌에는 클루브 에스파뇰에 
     이어 준우승을 차지했고 바르셀로나 주 컵 대회인 코파 바르셀로나에서 우승을 차지하며 첫 컵 트로피를 차지하였다. 이 시즌을 마지막으로 코파 마카야는 폐지되었다.
     1903-04 시즌부터는 캄피오나트 데 카탈루냐가 새로 개최되었고 1904-05, 1908-09, 1909-10 시즌에 우승을 차지하였다.</p>
-  <li><p id="1910">1908년, 클럽 구성원은 38명에 불과했고, 클럽을 더 크게 만들고 싶었던 조안 감페르는 나머지 구성원들의 동의를 받아 초대 회장으로 등극하였고 지난 10년 사이에 
-    4번의 홈 구장 변화가 있었던 만큼 제대로 된 홈 구장의 필요성을 느끼면서 1909년 4월, 캄프 데 라 인두스트리아를 공식 홈 구장으로 선정했다. 그리고 1910년에 제대로
-    된 축구단이 되기 위해서는 클럽 엠블럼이 있어야 한다고 판단하에 위 사진의 왼쪽 상단과 같은 엠블럼이 만들어졌다. 이후 이 엠블럼은 현재까지 사용되는 엠블럼의 
-    배경이 되었다. 
+  <li><p id="1910">1908년, 클럽 구성원은 38명에 불과했고 이에 대해 조안 감페르는 클럽을 더 크게 만들고 싶었다. 나머지 구성원의 동의를 받아 초대 회장으로 
+   등극하였고 지난 10년 사이에 4번의 홈 구장 변화가 있었던 만큼 제대로 된 홈 구장의 필요성을 느끼면서 1909년 4월, 캄프 데 라 인두스트리아를 공식 홈 구장으로 
+   선정했다. 감페르 회장은 1925년까지 총 5번 회장을 역임하며 팀의 기틀을 잡아 성장에 기여했다. 그리고 1910년에 제대로 된 축구단이 되기 위해서는 클럽 엠블럼이
+   있어야 한다고 판단하에 위 사진과 같은 엠블럼이 만들어졌다. 이후 이 엠블럼은 현재까지 사용되는 엠블럼의 배경이 되었다.</p>
+   <p>드디어 제대로 된 홈 구장이 생기고 난 뒤 현재는 코파 델 레이에 참가하여 1909-10, 1911-12, 1912-13에 우승을 차지하였다. 그리고 1910년부터 처음으로 국제
+    대회에 참가하기 시작했는데 카탈루냐, 바스크, 그리고 남부 프랑스 팀들이 참가한 피렌스 컵에 참가하여 1910, 1911, 1912, 1913까지 네 시즌 연속 우승을 
+    차지하였다. 기존에 참가하던 카탈루냐 리그인 캄피오나트 데 카탈루냐에서도 10년 사이 5번의 우승을 차지하였다. 이렇게 클럽이 부상할 수 있던 이유는 바르셀로나
+    최초의 슈퍼 스타이자 현재까지 유일한 1군 아시아 출신 선수, 파울리노 알칸타라의 맹활약이 있었다. 1911-12 시즌부터 고작 만 15세의 나이로 바르셀로나로 합류
+    하여 최고의 활약을 보여주었고 1915-16 시즌까지 총 4시즌을 소화하고 보헤미안 SC로 이적하였다. 바르셀로나의 좋은 성적과 알칸타라의 등장으로 클럽의 인기는 
+    점점 올라갔고 클럽에 대한 바르셀로나 시민들의 지지도 끝을 모르고 올라가면서 이 덕에 금전적인 도움 역시 받을 수 있었다. 홈 구장에 점점 많은 팬들이 몰리자 
+    자리가 부족해졌고 그럼에도 경기를 놓치기 싫었던 팬들이 지붕과 담벼락에 걸터앉기 시작하면서 이때부터 엉덩이를 뜻하는 '꾸레'라는 단어가 바르셀로나 팬을 
+    지칭하는 별명이 되었다.</p>
    <li><p id="1920">1920년대부터 바르셀로나는 파울리노 알칸타라, 주젭 사미티에르, 리카르도 사모라와 스타 선수들의 등장으로 더 큰 클럽으로 나아가기 시작했다. 덕분에 1922, 드디어
      바르셀로나 자체 소유의 홈 구장 캄프 데 레스 코르트로 홈 구장을 이전하게 되었다. 22,000명의 정원을 목적으로 건축되었고 전체 입석으로 입장할 시 60,000명까지 
      수용할 수 있었다. 그리고 1929년 2월 12일, 라리가가 창설되었고 바르셀로나는 승점 25점으로 라리가 최초 우승 타이틀을 거머지게 되었다. 1930년 7월 30일,
