--- a/구단 역사.html
+++ b/구단 역사.html
@@ -42,8 +42,8 @@
     최초의 슈퍼 스타이자 현재까지 유일한 1군 아시아 출신 선수, 파울리노 알칸타라의 맹활약이 있었다. 1911-12 시즌부터 고작 만 15세의 나이로 바르셀로나로 합류
     하여 최고의 활약을 보여주었고 1915-16 시즌까지 총 4시즌을 소화하고 보헤미안 SC로 이적하였다. 바르셀로나의 좋은 성적과 알칸타라의 등장으로 클럽의 인기는 
     점점 올라갔고 클럽에 대한 바르셀로나 시민들의 지지도 끝을 모르고 올라가면서 이 덕에 금전적인 도움 역시 받을 수 있었다. 홈 구장에 점점 많은 팬들이 몰리자 
-    자리가 부족해졌고 그럼에도 경기를 놓치기 싫었던 팬들이 지붕과 담벼락에 걸터앉기 시작하면서 이때부터 엉덩이를 뜻하는 '꾸레'라는 단어가 바르셀로나 팬을 
-    지칭하는 별명이 되었다.</p>
+    자리가 부족해졌고 그럼에도 경기를 놓치기 싫었던 팬들이 지붕과 담벼락에 걸터앉기 시작하면서 이때부터 엉덩이를 뜻하는 <span style="color:orange">꾸레</span>
+    라는 단어가 바르셀로나 팬을 지칭하는 별명이 되었다.</p>
    <li><p id="1920">1920년대부터 바르셀로나는 파울리노 알칸타라, 주젭 사미티에르, 리카르도 사모라와 스타 선수들의 등장으로 더 큰 클럽으로 나아가기 시작했다. 덕분에 1922, 드디어
      바르셀로나 자체 소유의 홈 구장 캄프 데 레스 코르트로 홈 구장을 이전하게 되었다. 22,000명의 정원을 목적으로 건축되었고 전체 입석으로 입장할 시 60,000명까지 
      수용할 수 있었다. 그리고 1929년 2월 12일, 라리가가 창설되었고 바르셀로나는 승점 25점으로 라리가 최초 우승 타이틀을 거머지게 되었다. 1930년 7월 30일,
