--- a/바야돌리드.html
+++ b/바야돌리드.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <table>
-    <tr>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;05.24 05:00 호세 소리야</tr>
+    <caption>05.24 05:00 (호세 소리야)</caption>
     <tr><td><img src="realvalladolid.png" width="100" height="75"></td> <td><p>vs</p></td>
       <td><img src="barcelona.png" width="100" height="75"></td></tr>
     <tr><td>&nbsp;레알 바야돌리드&nbsp;&nbsp;</td> <td><p>vs</p></td> <td>&nbsp;&nbsp;바르셀로나</td></tr>
