--- a/바야돌리드.html
+++ b/바야돌리드.html
@@ -3,14 +3,14 @@
 <head>
 </head>
 <body>
-  <table>
+  <table border=1>
     <caption>05.24 05:00 (호세 소리야)</caption>
-    <tr><td><img src="realvalladolid.png" width="100" height="75"></td> <td><p>vs</p></td>
+    <tr><td><img src="realvalladolid.png" width="120" height="75"></td> <td><p>vs</p></td>
       <td><img src="barcelona.png" width="80" height="75"></td></tr>
-    <tr><td>&nbsp;레알 바야돌리드&nbsp;&nbsp;</td> <td><p>vs</p></td> <td>&nbsp;&nbsp;바르셀로나</td></tr>
+    <tr><td>레알 바야돌리드</td> <td><p>vs</p></td> <td>바르셀로나</td></tr>
     <tr><td style= color:red;>&nbsp;&nbsp;&nbsp;3</td><td>&nbsp;:&nbsp;</td><td>&nbsp;1</td></tr>
-    <tr><td><img src="redball.png" width="20" height="20">2 크리스텐센</td>  <td></td>
-      <td><img src="ball.png" width="10" height="10">84 레반도프스키</td></tr>
+    <tr><td><img src="redball.png" width="20" height="20">2 크리스텐센</td><td></td>
+<td><img src="ball.png" width="10" height="10">84 레반도프스키</td></tr>
     <tr><td><img src="ball.png" width="10" height="10">22 래린</td></tr>
     <tr><td><img src="ball.png" width="10" height="10">73 플라타</td></tr>
     <table>
