--- a/바야돌리드.html
+++ b/바야돌리드.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-  <table border=1>
+  <table>
     <caption>05.24 05:00 (호세 소리야)</caption>
     <tr><td><img src="realvalladolid.png" width="120" height="75"></td> <td><p>vs</p></td>
       <td><img src="barcelona.png" width="80" height="75"></td></tr>
