--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img src="barcelona.png" width="100" height="100"></td></a>
     <td><a href="구단 역사.html"><h3>&lt;구단 역사&gt;</h3></td>
     <td><a href="구단 순위표.html"><h3>&lt;구단 순위표&gt;</h3></td>
-    <td><a href="바르셀로나뉴스.html"><h3>&lt;바르셀로나 뉴스&gt;</h3></td>
+    <td><a href="뉴스 & 인터뷰.html"><h3>&lt;뉴스 & 인터뷰&gt;</h3></td>
     </tr></table>
    <span style="color:blue";><h4>최근 경기 기록</h4></span>
   <div style="background-color:white";>
