Update 뉴스 & 인터뷰.html

--- a/뉴스 & 인터뷰.html
+++ b/뉴스 & 인터뷰.html
@@ -5,7 +5,19 @@
   <h4>바르셀로나 뉴스</h4>
   <table>
     <tfoot>
-      <tr><th><h3>PSG 떠나는 메시, 바르셀로나 복귀할</h3></th><th>"떠나지 않을 것" 사비 감독과 갈등->이적 요청 '단순히 해프닝'으로 마무리[오피셜]</th>
-        <th>'충격' 사비 감독과 갈등...1년 만에 이적 원한다</th></tr>
+      <tr><th><h3>PSG 떠나는 메시, 바르셀로나 복귀할까</h3></th><th><h3>"떠나지 않을 것" 사비 감독과 갈등->이적 요청 '단순히 해프닝'으로 마무리[오피셜]</h3></th>
+       <th><h3>'충격' 사비 감독과 갈등...1년 만에 이적 원한다</h3></th></tr>
+   </tfoot>
      <tbody>
       <tr><td><img src="뉴스1.png" alt="뉴스1"></td><td><img src="뉴스2.png alt="뉴스2"></td><td><img src="뉴스3.png" alt="뉴스3"></td></tr>
+       </tbody>
+       </table>
+       <table>
+       <tfoot>
+      <tr><th><h3>"가능한 한 바르셀로나서..." '은사' 텐 하흐와 재회는 없다</h3></th><th><h3>레반도프스키 따라갈까...올 여름 '충격'이적 가능성</h3></th>
+       <th><h3>"메시는 언제나 환영합니다"... 우루과이 DF의 진심</h3></th></tr>
+   </tfoot>
+     <tbody>
+      <tr><td><img src="뉴스4.png" alt="뉴스4"></td><td><img src="뉴스5.png alt="뉴스5"></td><td><img src="뉴스6.png" alt="뉴스6"></td></tr>
+       </tbody>
+       </table><hr>
