--- a/뉴스 & 인터뷰.html
+++ b/뉴스 & 인터뷰.html
@@ -9,7 +9,7 @@
        <th><h3>'충격' 사비 감독과 갈등...1년 만에 이적 원한다</h3></th></tr>
    </tfoot>
      <tbody>
-      <tr><td><img src="뉴스1.png" alt="뉴스1"></td><td><img src="뉴스2.png alt="뉴스2"></td><td><img src="뉴스3.png" alt="뉴스3"></td></tr>
+      <tr><td><img src="뉴스1.png" alt="뉴스1" width="350" height="300"></td><td><img src="뉴스2.png alt="뉴스2"></td><td><img src="뉴스3.png" alt="뉴스3"></td></tr>
        </tbody>
        </table>
        <table>
