Update 뉴스 & 인터뷰.html

--- a/뉴스 & 인터뷰.html
+++ b/뉴스 & 인터뷰.html
@@ -18,6 +18,7 @@
        <th><h3>"메시는 언제나 환영합니다"... 우루과이 DF의 진심</h3></th></tr>
    </tfoot>
      <tbody>
-      <tr><td><img src="뉴스4.png" alt="뉴스4"></td><td><img src="뉴스5.png alt="뉴스5"></td><td><img src="뉴스6.png" alt="뉴스6"></td></tr>
+      <tr><td><img src="뉴스4.png" alt="뉴스4" width="350" height="200"></td><td><img src="뉴스5.png alt="뉴스5" width="350" height="200"></td>
+       <td><img src="뉴스6.png" alt="뉴스6" width="350" height="200"></td></tr>
        </tbody>
        </table><hr>
