Update 뉴스 & 인터뷰.html

--- a/뉴스 & 인터뷰.html
+++ b/뉴스 & 인터뷰.html
@@ -9,17 +9,17 @@
        <th><h3>'충격' 사비 감독과 갈등...1년 만에 이적 원한다</h3></th></tr>
    </tfoot>
      <tbody>
-      <tr><td><img src="뉴스1.png" alt="뉴스1" width="400" height="200"></td>
+      <tr><td><img src="뉴스1.png" alt="뉴스1" width="400" height="200"></td><td><img src="뉴스2.png" alt="뉴스2" width="400" height="200"></td>
        <td><img src="뉴스3.png" alt="뉴스3" width="400" height="200"></td></tr>
        </tbody>
        </table>
        <table>
        <tfoot>
-      <tr><th><h3>"가능한 한 바르셀로나서..." '은사'<br> 텐 하흐와 재회는 없다</h3></th><th><h3>레반도프스키 따라갈까...올 여름 '충격'이적 가능성</h3></th>
-       <th><h3>"메시는 언제나 환영합니다"... 우루과이 DF의 진심</h3></th></tr>
+      <tr><th><h3>"가능한 한 바르셀로나서..." '은사'<br> 텐 하흐와 재회는 없다</h3></th><th><h3>레반도프스키 따라갈까...올 여름 '충격'<br>이적 가능성</h3></th>
+       <th><h3>"메시는 언제나 환영합니다"... 우루과이<br> DF의 진심</h3></th></tr>
    </tfoot>
      <tbody>
-      <tr><td><img src="뉴스4.png" alt="뉴스4" width="400" height="200"></td>
+      <tr><td><img src="뉴스4.png" alt="뉴스4" width="400" height="200"></td><td><img src="뉴스5.png" alt="뉴스5" width="400" height="200"></td>
        <td><img src="뉴스6.png" alt="뉴스6" width="400" height="200"></td></tr>
        </tbody>
        </table><hr>
