Update 뉴스 & 인터뷰.html

--- a/뉴스 & 인터뷰.html
+++ b/뉴스 & 인터뷰.html
@@ -10,8 +10,8 @@
    </tfoot>
      <tbody>
       <tr><td><a href="https://www.wowtv.co.kr/NewsCenter/News/Read?articleId=A202306020210&t=NN" target="_self"><img src="뉴스1.png" alt="뉴스1" width="400" height="200"></td>
-       <td><a href="https://www.wowtv.co.kr/NewsCenter/News/Read?articleId=A202306020210&t=NN" target="_self"><img src="뉴스2.png" alt="뉴스2" width="400" height="200"></td>
-       <td><a href="https://www.wowtv.co.kr/NewsCenter/News/Read?articleId=A202306020210&t=NN" target="_self"><img src="뉴스3.png" alt="뉴스3" width="400" height="200"></td></tr>
+       <td><a href="https://www.goal.com/kr/%EB%89%B4%EC%8A%A4/%E1%84%84%E1%85%A5%E1%84%82%E1%85%A1%E1%84%8C%E1%85%B5-%E1%84%8B%E1%85%A1%E1%86%AD%E1%84%8B%E1%85%B3%E1%86%AF-%E1%84%80%E1%85%A5%E1%86%BA-%E1%84%89%E1%85%A1%E1%84%87%E1%85%B5-%E1%84%80%E1%85%A1%E1%86%B7%E1%84%83%E1%85%A9%E1%86%A8%E1%84%80%E1%85%AA-%E1%84%80%E1%85%A1%E1%86%AF%E1%84%83%E1%85%B3%E1%86%BC%E2%86%92%E1%84%8B%E1%85%B5%E1%84%8C%E1%85%A5%E1%86%A8-%E1%84%8B%E1%85%AD%E1%84%8E%E1%85%A5%E1%86%BC-%E1%84%83%E1%85%A1%E1%86%AB%E1%84%89%E1%85%AE%E1%86%AB-%E1%84%92%E1%85%A2%E1%84%91%E1%85%B3%E1%84%82%E1%85%B5%E1%86%BC-%E1%84%8B%E1%85%B3%E1%84%85%E1%85%A9-%E1%84%86%E1%85%A1%E1%84%86%E1%85%AE%E1%84%85%E1%85%B5-%E1%84%8B%E1%85%A9%E1%84%91%E1%85%B5%E1%84%89%E1%85%A7%E1%86%AF/blt3fbdf325dcf2e835" target="_self"><img src="뉴스2.png" alt="뉴스2" width="400" height="200"></td>
+       <td><a href="https://www.goal.com/kr/%EB%89%B4%EC%8A%A4/%E1%84%8E%E1%85%AE%E1%86%BC%E1%84%80%E1%85%A7%E1%86%A8-%E1%84%89%E1%85%A1%E1%84%87%E1%85%B5-%E1%84%80%E1%85%A1%E1%86%B7%E1%84%83%E1%85%A9%E1%86%A8%E1%84%80%E1%85%AA-%E1%84%80%E1%85%A1%E1%86%AF%E1%84%83%E1%85%B3%E1%86%BC--1%E1%84%82%E1%85%A7%E1%86%AB-%E1%84%86%E1%85%A1%E1%86%AB%E1%84%8B%E1%85%A6-%E1%84%8B%E1%85%B5%E1%84%8C%E1%85%A5%E1%86%A8-%E1%84%8B%E1%85%AF%E1%86%AB%E1%84%92%E1%85%A1%E1%86%AB%E1%84%83%E1%85%A1/blt5d19e90bca1c3212" target="_self"><img src="뉴스3.png" alt="뉴스3" width="400" height="200"></td></tr>
        </tbody>
        </table>
        <table>
