--- a/뉴스 & 인터뷰.html
+++ b/뉴스 & 인터뷰.html
@@ -2,7 +2,7 @@
 <html>
 <head><title>바르셀로나 뉴스 & 인터뷰</title><head>
 <body>
-  <h4>바르셀로나 뉴스</h4>
+  <h4>바르셀로나 뉴스</h4><hr>
   <table>
     <tfoot>
       <tr><th><h3>PSG 떠나는 메시, 바르셀로나 복귀할까</h3></th><th><h3>"떠나지 않을 것" 사비 감독과 갈등->이적 요청<br> '단순히 해프닝'으로 마무리[오피셜]</h3></th>
@@ -20,8 +20,8 @@
        <th><h3>"메시는 언제나 환영합니다"... 우루과이<br> DF의 진심</h3></th></tr>
    </tfoot>
      <tbody>
-      <tr><td><a href="https://www.wowtv.co.kr/NewsCenter/News/Read?articleId=A202306020210&t=NN" target="_self"><img src="뉴스4.png" alt="뉴스4" width="400" height="200"></td>
-          <td><a href="https://www.wowtv.co.kr/NewsCenter/News/Read?articleId=A202306020210&t=NN" target="_self"><img src="뉴스5.png" alt="뉴스5" width="400" height="200"></td>
-          <td><a href="https://www.wowtv.co.kr/NewsCenter/News/Read?articleId=A202306020210&t=NN" target="_self"><img src="뉴스6.png" alt="뉴스6" width="400" height="200"></td></tr>
+      <tr><td><a href="https://www.goal.com/kr/%EB%89%B4%EC%8A%A4/%E1%84%80%E1%85%A1%E1%84%82%E1%85%B3%E1%86%BC%E1%84%92%E1%85%A1%E1%86%AB-%E1%84%92%E1%85%A1%E1%86%AB-%E1%84%87%E1%85%A1%E1%84%85%E1%85%B3%E1%84%89%E1%85%A6%E1%86%AF%E1%84%85%E1%85%A9%E1%84%82%E1%85%A1%E1%84%89%E1%85%A5---%E1%84%8B%E1%85%B3%E1%86%AB%E1%84%89%E1%85%A1-%E1%84%90%E1%85%A6%E1%86%AB-%E1%84%92%E1%85%A1%E1%84%92%E1%85%B3%E1%84%8B%E1%85%AA-%E1%84%8C%E1%85%A2%E1%84%92%E1%85%AC%E1%84%82%E1%85%B3%E1%86%AB-%E1%84%8B%E1%85%A5%E1%86%B9%E1%84%83%E1%85%A1/blt5257b44a8dc1a185" target="_self"><img src="뉴스4.png" alt="뉴스4" width="400" height="200"></td>
+          <td><a href="https://www.goal.com/kr/%EB%89%B4%EC%8A%A4/%E1%84%85%E1%85%A6%E1%84%87%E1%85%A1%E1%86%AB%E1%84%83%E1%85%A9%E1%84%91%E1%85%B3%E1%84%89%E1%85%B3%E1%84%8F%E1%85%B5-%E1%84%84%E1%85%A1%E1%84%85%E1%85%A1%E1%84%80%E1%85%A1%E1%86%AF%E1%84%81%E1%85%A1--%E1%84%8B%E1%85%A9%E1%86%AF%E1%84%8B%E1%85%A7%E1%84%85%E1%85%B3%E1%86%B7-%E1%84%8E%E1%85%AE%E1%86%BC%E1%84%80%E1%85%A7%E1%86%A8-%E1%84%8B%E1%85%B5%E1%84%8C%E1%85%A5%E1%86%A8-%E1%84%80%E1%85%A1%E1%84%82%E1%85%B3%E1%86%BC%E1%84%89%E1%85%A5%E1%86%BC/blt1b839e231d2f93d3" target="_self"><img src="뉴스5.png" alt="뉴스5" width="400" height="200"></td>
+          <td><a href="https://www.goal.com/kr/%EB%89%B4%EC%8A%A4/%E1%84%86%E1%85%A6%E1%84%89%E1%85%B5%E1%84%82%E1%85%B3%E1%86%AB-%E1%84%8B%E1%85%A5%E1%86%AB%E1%84%8C%E1%85%A6%E1%84%82%E1%85%A1-%E1%84%92%E1%85%AA%E1%86%AB%E1%84%8B%E1%85%A7%E1%86%BC%E1%84%92%E1%85%A1%E1%86%B8%E1%84%82%E1%85%B5%E1%84%83%E1%85%A1---%E1%84%8B%E1%85%AE%E1%84%85%E1%85%AE%E1%84%80%E1%85%AA%E1%84%8B%E1%85%B5-df%E1%84%8B%E1%85%B4-%E1%84%8C%E1%85%B5%E1%86%AB%E1%84%89%E1%85%B5%E1%86%B7/blt9c57daf4fa64de2d" target="_self"><img src="뉴스6.png" alt="뉴스6" width="400" height="200"></td></tr>
        </tbody>
-       </table><hr>
+       </table><br><br>
