--- a/뉴스 & 인터뷰.html
+++ b/뉴스 & 인터뷰.html
@@ -3,7 +3,7 @@
 <head><title>바르셀로나 뉴스 & 인터뷰</title><head>
 <body>
   <h4>바르셀로나 뉴스</h4><hr>
-  <table>
+  <table align="center">
     <tfoot>
       <tr><th><h3>PSG 떠나는 메시, 바르셀로나 복귀할까</h3></th><th><h3>"떠나지 않을 것" 사비 감독과 갈등->이적 요청<br> '단순히 해프닝'으로 마무리[오피셜]</h3></th>
        <th><h3>'충격' 사비 감독과 갈등...1년 만에 이적 원한다</h3></th></tr>
