--- a/구단 역사.html
+++ b/구단 역사.html
@@ -16,8 +16,11 @@
  <td><a href="#1920"><img src="1920.png" alt="사진3" width="150" height="150"></a></td>
  <td><a href="#1936"><img src="1936.png" alt="사진4" width="150" height="150"></a></td>
  <td><a href="#1939"><img src="1939.png" alt="사진5" width="150" height="150"></a></td></tr>
-<tr><td><img src="1946.png" alt="사진6" width="150" height="150"></td><td><img src="1960.png" alt="사진7" width="150" height="150"></td><td><img src="1974.png" alt="사진8" width="150" height="150"></td>
-<td><img src="1975.png" alt="사진9" width="150" height="150"></td><td><img src="2002.png" alt="사진10" width="150" height="150"></td></tr>
+<tr><td><a href="#1946"><img src="1946.png" alt="사진6" width="150" height="150"></td>
+ <td><img src="1960.png" alt="사진7" width="150" height="150"></td>
+ <td><img src="1974.png" alt="사진8" width="150" height="150"></td>
+<td><img src="1975.png" alt="사진9" width="150" height="150"></td>
+ <td><img src="2002.png" alt="사진10" width="150" height="150"></td></tr>
 </tbody>
 </table><hr>
  <ul>
@@ -46,12 +49,28 @@
     라는 단어가 바르셀로나 팬을 지칭하는 별명이 되었다.</p>
    <li><p id="1920">1920년대부터 바르셀로나는 파울리노 알칸타라, 주젭 사미티에르, 리카르도 사모라와 스타 선수들의 등장으로 더 큰 클럽으로 나아가기 시작했다. 덕분에 1922, 드디어
      바르셀로나 자체 소유의 홈 구장 캄프 데 레스 코르트로 홈 구장을 이전하게 되었다. 22,000명의 정원을 목적으로 건축되었고 전체 입석으로 입장할 시 60,000명까지 
-     수용할 수 있었다. 그리고 1929년 2월 12일, 라리가가 창설되었고 바르셀로나는 승점 25점으로 라리가 최초 우승 타이틀을 거머지게 되었다. 1930년 7월 30일,
+     수용할 수 있었다. 1924년 12월 7일과 8일, 클럽 창단 25주년을 기념하여 레알 우니온 데 이룬과 이틀 연속 기념 경기를 개최하였다. 그리고 이 날을 기점으로 
+     11명으로 시작했던 클럽 구성원은 25년 만에 12,207명으로 늘었다. 1928년 코파 델 레이 결승까지 진출하였고 연장전이라는 개념이 없었던 당시였기에 무려 2차례나
+     무승부 경기를 치르고 마지막에 치러진 3번째 경기에서 3대1로 승리하였다. 이 경기는 바르셀로나 경기 중 최초로 라디오로 라이브 중계가 된 경기로 남았다.
+    그리고 1929년 2월 12일, <span style="color:orange">라리가</span>가 창설되었고 바르셀로나는 승점 25점으로 라리가 최초 우승 타이틀을 거머지게 되었다. 1930년 7월 30일,
     조안 감페르가 자살을 하면서 향년 52세 나이로 사망하게 되었다. 주제프 수뇰이 제 2대 회장으로 부임하게 되었다.</p>
-  <li><p id="1936">그리고 1936년, 스페인 내전의 여파로 주제프 수뇰이 프랑코 군에게 총상을 당했고, 이 시기에 카탈루냐어 사용 자체가 금지되어 팀명이 Club de Futbol 
-   Barcelona라는 명칭으로 이름이 바뀌었다. 그리고 스페인 내전으로 인해 라리가를 진행할 수 없게 되었다.</p>
+  <li><p id="1936">그리고 1936년, <span style="color:orange">스페인 내전</span>의 여파로 주제프 수뇰이 프랑코 군에게 총상을 당했고, 이 시기에 카탈루냐어 사용
+   자체가 금지되어 팀명이 <span style="color:orange">Club de Futbol Barcelona</span>라는 명칭으로 이름이 바뀌었다. 그리고 스페인 내전으로 인해 라리가를 진행할
+   수 없게 되자 1936-37 시즌, 6개의 카탈루냐 클럽과 4개의 발렌시아 클럽이 참가한 지중해 리그가 개최되었고 14경기 7승 6무 1패 승점 20점으로 우승을 차지하였다.
+   내전으로 인해 코파 델 레이도 진행할 수 없게 되자 카탈루냐 지역 팀들만 참여하는 리가 카탈라나가 개최되었고 이 대회에서도 17경기 14승 1무 2패 승점 29점으로 
+   우승을 차지하였다. 기존에 참가하던 캄피오나트 데 카탈루냐에서도 최강자 다운 모습을 보여주며 또 10년 사이에 5번의 우승을 거머쥐었다. 그리고 1939-40 시즌을 
+   끝으로 캄피오나트 데 카탈루냐는 폐지된다. 하지만 내전으로 인해 대회의 규모 역시 매우 작아지게 되었고 이로 인해 클럽의 경제적 부분에 타격이 오게 되자 선수들
+   을 아메리카 투어라는 명분으로 아메리카 대륙 클럽들로 보냈다. 여기서 벌어 들인 돈은 이후 클럽 재건에 큰 도움이 된다.</p>
    <li><p id="1939">하지만 다행히 1939년 6월 29일, 캄프 데 레스 코르트의 재개장이 허가되었으며 라리가가 재개되었다. 하지만 빼앗긴 팀명으로 인해 
-   로고에 적힌 FCB를 사용하지 못하고 CFB로 바뀌게 된다.</p>
+   로고에 적힌 FCB를 사용하지 못하고 CFB로 바뀌게 된다. 이후 재개된 코파 델 레이에서 1941-42 시즌 우승을 차지한다. 그리고 1944년, <span style="color:orange">
+    주젭 사미티에르</span>가 바르셀로나 감독으로 돌아온다. 복귀와 동시에 1944-45 시즌, 17년만에 라리가 우승 타이틀을 되찾아 온다.</p>
+   <li><p id="1946">1947년 사미티에르가 감독직을 내려놓고 엔리크 페르난데스가 부임하게 되고 1947-48 시즌, 라리가 우승을 차지한다. 1948-49 시즌에는 라리가에서도
+    우승하고 FIFA의 인증을 받은 유럽 클럽 대항전 라틴 컵에서 스포르팅 CP를 꺾으며 대회 초대 우승팀 타이틀을 얻게 된다. 1947년을 끝으로 감독직에서 물러난 주젭 
+    사미티에르가 테크니컬 디렉터로 보직을 바꾼 뒤 1951년, 바르셀로나의 역사를 뒤흔들 스타 플레이어, 라슬로 쿠발라를 바르셀로나로 데려온다. 이후 바르사는 3년 
+    동안 코파 델 레이 3연속 우승, 라리가 2연속 우승, 코파 에바 두아르테 2연속 우승을 거두며 최고의 시즌을 보내게 된다. 그리고 1954년, CD 로스 미요나리오스에서
+    꾸준히 몸값을 높이고 있던 알프레도 디 스테파노의 전 소속팀인 CA 리버 플레이트와 디 스테파노의 이적에 대해 합의를 하면서 많은 기대를 불러 일으켰다. 하지만 
+    선수 개인 합의 직전, 레알 마드리드 CF가 끼어들어 디 스테파노를 하이 재킹 하는 바람에 디 스테파노는 레알 마드리드로 향하게 되었고 쿠발라의 바르셀로나 vs 디
+    스테파노의 레알 마드리드의 라이벌 의식이 생기기 시작했다. 디 스테파노를 빼앗겼기에 그를 대체할 선수로 루이스 수아레스를 영입한다.</p>
   <li><p>1955년, 점점 커지는 클럽의 위상에 걸맞게 새로운 홈 구장이 필요하다는 많은 클럽 구성원들의 목소리가 나왔고 운영진들도 이를 받아들여 새로운 홈 구장을 디자인하
     기 시작한다. 그리고 1957년 9월 24일, 2년 간의 건설 끝에 새로운 홈 구장 캄 노우가 개장한다. 당시 최대 수용 인원은 99,053명으로 전 세계 최대의 축구 전용 구장
     이라는 타이틀을 얻게 된다. 새로운 홈 구장과 함께 바르셀로나는 승승장구하기 시작했으며 현재 UEFA 유로파 리그의 원조 격이라고 할 수 있는 인터-시티 페어스컵에
