--- a/구단 역사.html
+++ b/구단 역사.html
@@ -17,10 +17,10 @@
  <td><a href="#1936"><img src="1936.png" alt="사진4" width="150" height="150"></a></td>
  <td><a href="#1939"><img src="1939.png" alt="사진5" width="150" height="150"></a></td></tr>
 <tr><td><a href="#1946"><img src="1946.png" alt="사진6" width="150" height="150"></td>
- <td><img src="1960.png" alt="사진7" width="150" height="150"></td>
- <td><img src="1974.png" alt="사진8" width="150" height="150"></td>
-<td><img src="1975.png" alt="사진9" width="150" height="150"></td>
- <td><img src="2002.png" alt="사진10" width="150" height="150"></td></tr>
+ <td><a href="#1960"><img src="1960.png" alt="사진7" width="150" height="150"></td>
+ <td><a href="#1974"><img src="1974.png" alt="사진8" width="150" height="150"></td>
+<td><a href="#1975"><img src="1975.png" alt="사진9" width="150" height="150"></td>
+ <td><a href="#2002"><img src="2002.png" alt="사진10" width="150" height="150"></td></tr>
 </tbody>
 </table><hr>
  <ul>
@@ -62,7 +62,7 @@
    끝으로 캄피오나트 데 카탈루냐는 폐지된다. 하지만 내전으로 인해 대회의 규모 역시 매우 작아지게 되었고 이로 인해 클럽의 경제적 부분에 타격이 오게 되자 선수들
    을 아메리카 투어라는 명분으로 아메리카 대륙 클럽들로 보냈다. 여기서 벌어 들인 돈은 이후 클럽 재건에 큰 도움이 된다.</p>
    <li><p id="1939">하지만 다행히 1939년 6월 29일, 캄프 데 레스 코르트의 재개장이 허가되었으며 라리가가 재개되었다. 하지만 빼앗긴 팀명으로 인해 
-   로고에 적힌 FCB를 사용하지 못하고 CFB로 바뀌게 된다. 이후 재개된 코파 델 레이에서 1941-42 시즌 우승을 차지한다. 그리고 1944년, <span style="color:orange">
+   로고에 적힌 FCB를 사용하지 못하고 <span style="color:orange">CFB</span>로 바뀌게 된다. 이후 재개된 코파 델 레이에서 1941-42 시즌 우승을 차지한다. 그리고 1944년, <span style="color:orange">
     주젭 사미티에르</span>가 바르셀로나 감독으로 돌아온다. 복귀와 동시에 1944-45 시즌, 17년만에 라리가 우승 타이틀을 되찾아 온다.</p>
    <li><p id="1946">1947년 사미티에르가 감독직을 내려놓고 엔리크 페르난데스가 부임하게 되고 1947-48 시즌, 라리가 우승을 차지한다. 1948-49 시즌에는 라리가에서도
     우승하고 FIFA의 인증을 받은 유럽 클럽 대항전 라틴 컵에서 스포르팅 CP를 꺾으며 대회 초대 우승팀 타이틀을 얻게 된다. 1947년을 끝으로 감독직에서 물러난 주젭 
@@ -71,24 +71,24 @@
     꾸준히 몸값을 높이고 있던 알프레도 디 스테파노의 전 소속팀인 CA 리버 플레이트와 디 스테파노의 이적에 대해 합의를 하면서 많은 기대를 불러 일으켰다. 하지만 
     선수 개인 합의 직전, 레알 마드리드 CF가 끼어들어 디 스테파노를 하이 재킹 하는 바람에 디 스테파노는 레알 마드리드로 향하게 되었고 쿠발라의 바르셀로나 vs 디
     스테파노의 레알 마드리드의 라이벌 의식이 생기기 시작했다. 디 스테파노를 빼앗겼기에 그를 대체할 선수로 루이스 수아레스를 영입한다.</p>
-  <li><p>1955년, 점점 커지는 클럽의 위상에 걸맞게 새로운 홈 구장이 필요하다는 많은 클럽 구성원들의 목소리가 나왔고 운영진들도 이를 받아들여 새로운 홈 구장을 디자인하
+  <p>1955년, 점점 커지는 클럽의 위상에 걸맞게 새로운 홈 구장이 필요하다는 많은 클럽 구성원들의 목소리가 나왔고 운영진들도 이를 받아들여 새로운 홈 구장을 디자인하
     기 시작한다. 그리고 1957년 9월 24일, 2년 간의 건설 끝에 새로운 홈 구장 캄 노우가 개장한다. 당시 최대 수용 인원은 99,053명으로 전 세계 최대의 축구 전용 구장
     이라는 타이틀을 얻게 된다. 새로운 홈 구장과 함께 바르셀로나는 승승장구하기 시작했으며 현재 UEFA 유로파 리그의 원조 격이라고 할 수 있는 인터-시티 페어스컵에
     서 1957-58, 1959-60 시즌에 우승을 차지하게 되고 라리가에서도 1958-59, 1959-60 시즌에 2연속 우승을 차지하게 되었다.</p>
- <li> <p>1959-60 시즌 라리가 우승 이후 바르사는 30년에 걸친 최악의 암흑기를 겪었다. 처음에는 일시적인 것처럼 보였던 이 암흑기는 해가 지나가면서 끝이 보이지 않는 터
+ <li> <p id="1960">1959-60 시즌 라리가 우승 이후 바르사는 30년에 걸친 최악의 암흑기를 겪었다. 처음에는 일시적인 것처럼 보였던 이 암흑기는 해가 지나가면서 끝이 보이지 않는 터
     널이 되었다. 바르셀로나는 60년대 동안 라리가 우승을 단 한차례도 차지하지 못했으며, 1998-90시즌까지 30시즌 동안 라리가 우승이 단 두 차례에 불과했다. 끝없는 
     암흑기와 함께 팀의 몰락이 계속될 것이라고 예상되었지만 1971년에 리누스 미헬스 감독을 선임하고 1973년 8월 13일, 요한 크루이프를 최대 이적료로 영입했으며
     크루이프는 곧바로 바르셀로나의 주장으로 선임되었다. 이렇게 감독 리누스 미헬스, 주장 요한 크루이프를 필두로 바르셀로나는 1973-74 시즌 라리가 타이틀도 다시
-    되찾아 오게 되었고, 크루이프는 1974년 발롱도르를 거머지게 되었다. 같은 해인 1974년, 바르셀로나는 창단 75주년을 맞이하여 공식 응원가를 처음으로 만들기 시작
-    하였다. 하우메 피카스, 주제프 마리아 에스피나스 작사에 마누엘 발스와 코랄 산트 조르디 작곡으로 Cant Del Barca를 만들었다. 그리고 스페인 정부가 민주주의 시
-    대로 접어들면서 모든 지방의 언어 사용이 자유화되면서 Club de Futbol Barcelona에서 다시 원 이름인 Futbol Club Barcelon를 되찾았고 로고 역시 CFB에서 FCB로
+  되찾아 오게 되었고, 크루이프는 1974년 발롱도르를 거머지게 되었다.</p>
+  <li><p id="1974"> 같은 해인 1974년, 바르셀로나는 창단 75주년을 맞이하여 공식 응원가를 처음으로 만들기 시작하였다. 하우메 피카스, 주제프 마리아 에스피나스 
+ 작사에 마누엘 발스와 코랄 산트 조르디 작곡으로 Cant Del Barca를 만들었다. 그리고 스페인 정부가 민주주의 시대로 접어들면서 모든 지방의 언어 사용이 자유화되면서 Club de Futbol Barcelona에서 다시 원 이름인 Futbol Club Barcelon를 되찾았고 로고 역시 CFB에서 FCB로
     바뀔 수 있게 되었다.
-    <li><p>1978년에 치러진 회장 선거에서 주젭 유이스 누녜스가 당선된 후 재정이 넉넉해졌고 이때부터 누녜스는 스타 플레이어들을 수집하기 시작했는데, 1982년 여름 이적
+    <li><p id="1975">1978년에 치러진 회장 선거에서 주젭 유이스 누녜스가 당선된 후 재정이 넉넉해졌고 이때부터 누녜스는 스타 플레이어들을 수집하기 시작했는데, 1982년 여름 이적
       시장에 80년대 최고의 축구 스타, 디에고 마라도나를 영입했고, 이어서 게리 리네커, 베른트 슈스터, 안도니 수비사레타 같은 슈퍼스타들을 돈을 뿌려가며 영입했다.
       동시에 누녜스는 우도 라텍, 세자르 루이스 메노티, 테리 베너블스, 루이스 아라고네스 등 명장등을 연이어 영입했으나 성과가 나오지 않았다. 하지만 이렇게 천문학적
       인 돈을 뿌린 것에 비하면 바르사가 거둔 성과는 보잘 것 없었다. 1984-85 시즌에 라리가 우승을 거두기는 했지만 그것이 끝이었다. 이후에도 바르사의 암흑기는 1990
       년까지 계속되었다.</p>
-  <li><p>1977-78 시즌을 끝으로 팀을 떠난 요한 크루이프가 10년 뒤에 감독으로 바르셀로나에 돌아왔다. 그는 선수단을 대폭 정리하여 베스트 일레븐 중에서 무려 10명을 갈아
+  <p>1977-78 시즌을 끝으로 팀을 떠난 요한 크루이프가 10년 뒤에 감독으로 바르셀로나에 돌아왔다. 그는 선수단을 대폭 정리하여 베스트 일레븐 중에서 무려 10명을 갈아
     치웠다. 누녜스 회장의 전폭적인 지원 약속을 바탕으로 크루이프는 기존 주전 선수들을 싸그리 정리하고 자신이 원하는 새로운 선수들을 대거 영입했다. 크루이프는 흐리
     스토 스토이치코프, 미카엘 라우드루프, 로날트 쿠만, 게오르그 하지, 호마리우 등의 외국인 선수들을 대거 영입해 '드림팀'을 구축했다. 자신이 원했던 선수들로 스쿼드
     를 전원 갈아엎은 크루이프는 이후 바르사에 자신이 원하는 축구를 덧입히는 작업을 했다. 그러나 크루이프의 드림팀은 초기 2년간 좋은 결과를 거두지 못했지만 1988-89
@@ -96,7 +96,7 @@
     리가 우승 타이틀을 거머지게 되었다. 하지만 크루이프 감독과 라우드루프, 호마리우, 스토이치코프 등 스타 플레이어들이 심각한 대립을 하면서 팀 케미가 박살나기
   시작했다. 그리고 1994-95 시즌부터 호마리우, 스토이치코프, 라우드루프 등 스타 플레이어들이 차례로 타 팀으로 이적하면서 '드림팀'은 와해되었다. 이렇게 스타 플레이
   어들이 떠나자 크루이프와 바르셀로나도 함께 몰락했다. 1995-96 시즌까지 두 시즌 동안 계속 실패를 거둔 크루이프 감독은 결국 누녜스 회장과 갈등 끝에 팀을 떠났다.</p>
-  <li><p>1996년 크루이프를 경질한 누녜스 회장은 후임으로 바비 롭슨을 새 감독으로 영입했고, 동시에 호나우두와 루이스 엔리케를 영입했다. 이후 1999년, 바르셀로나는 기나
+  <p>1996년 크루이프를 경질한 누녜스 회장은 후임으로 바비 롭슨을 새 감독으로 영입했고, 동시에 호나우두와 루이스 엔리케를 영입했다. 1999년, 바르셀로나는 기나
     긴 시간 끝에 마침내 클럽 창단 100 주년을 기록하게 된다. 
   </p>
  </ul>
